<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frame"
        android:clipToOutline="true"
        android:background="@drawable/show_frame"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        >

        <TextView
            android:id="@+id/codi_main"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="43dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="top"
            android:text="@string/coady"
            android:textAppearance="@style/coady" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/codi_main"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/dot1"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="43dp"
                android:background="@drawable/dot" />

            <TextView
                android:id="@+id/Casual"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:background="#00ff0000"
                android:clickable="true"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:onClick="btnClick"
                android:text="@string/Casual"
                android:textAppearance="@style/main_opt" />

            <View
                android:id="@+id/dot2"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/dot" />

            <TextView
                android:id="@+id/Sports"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:background="#00ff0000"
                android:clickable="true"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:onClick="btnClick"
                android:text="@string/Sports"
                android:textAppearance="@style/main_opt" />
            <View
                android:id="@+id/dot3"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@drawable/dot" />
            <TextView
                android:id="@+id/Office"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:background="#00ff0000"
                android:clickable="true"
                android:fontFamily="@font/comfortaa"
                android:gravity="center_horizontal|top"
                android:onClick="btnClick"
                android:text="@string/Office"
                android:textAppearance="@style/main_opt" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemView"
            android:layout_width="310dp"
            android:layout_height="600dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:visibility="visible"
            tools:listitem="@layout/item_frame" />



    </RelativeLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:background="@color/white"
        app:itemIconTint="@drawable/menu_selector_color"
        app:itemTextColor="@drawable/menu_selector_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottomnavigationview" />


</androidx.constraintlayout.widget.ConstraintLayout>